--- a/BolWallet/Views/AddMultiCitizenship.xaml
+++ b/BolWallet/Views/AddMultiCitizenship.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="BolWallet.Views.AddMultiCitizenship"
-             Title="Add MultiCitizenship"
+             Title="MultiCitizenship"
              xmlns:pages="clr-namespace:BolWallet.Pages"
              BackgroundColor="{DynamicResource SecondaryColor}">
     
