--- a/BolWallet/Views/MoveClaimPage.xaml
+++ b/BolWallet/Views/MoveClaimPage.xaml
@@ -7,6 +7,7 @@
     xmlns:viewModels="clr-namespace:BolWallet.ViewModels"
     x:DataType="viewModels:MoveClaimViewModel"
 	xmlns:Converters="clr-namespace:BolWallet.Converters"
+    xmlns:models="clr-namespace:BolWallet.Models"
     BackgroundColor="{DynamicResource SecondaryColor}">
 
 	<ContentPage.Resources>
@@ -67,22 +68,94 @@
 				Grid.ColumnSpan="3" 
 				Text="Claim Balance" 
 				TextColor="Black"/>
-			<Frame   
+            <Frame   
 				Grid.Row="4"
 				Grid.ColumnSpan="3" 
 				BackgroundColor="WhiteSmoke" 
 				Padding="10">
-				<Label Text="{Binding BolAccount.ClaimBalance}" TextColor="Black"/>
-			</Frame>
+                <Label Text="{Binding BolAccount.ClaimBalance}" TextColor="Black"/>
+            </Frame>
 
-			<Picker 
+            <Picker 
                 Grid.Row="5"
-                Title="Commercial Address" 
+                IsVisible="{OnPlatform MacCatalyst=false, Default=true}"
+                Title="Commercial Address"
                 ItemsSource="{Binding CommercialBalancesDisplayList}"
                 SelectedIndex="{Binding SelectedCommercialAddressIndex}" >
-			</Picker>
+            </Picker>
 
-			<Entry Placeholder="Amount" 
+            <Grid Grid.Row="5"
+                  Grid.ColumnSpan="3"
+                  HorizontalOptions="Start"
+                  RowDefinitions="Auto,*"
+                  RowSpacing="25"
+                  IsVisible="{OnPlatform MacCatalyst=true, Default=false}">
+                
+                <Label Grid.Row="0"
+                       Grid.ColumnSpan="3"
+                       Text="{Binding SelectedCommercialAddress}"
+                       TextColor="Black"/>
+                
+                <Frame   
+	                Grid.Row="1"
+	                Grid.ColumnSpan="3" 
+	                BackgroundColor="WhiteSmoke"
+                    Padding="10">
+
+                    <CollectionView
+                        x:Name="CommercialBalancesCollectionView"
+                        HeightRequest="150"
+                        BackgroundColor="WhiteSmoke"
+                        EmptyView="No addresses found"
+                        ItemsSource="{Binding CommercialBalancesList}"
+                        SelectionMode="Single"
+                        SelectionChangedCommand="{Binding SelectedCommercialBalanceCommand}"
+                        SelectionChangedCommandParameter="{Binding SelectedItem, Source={x:Reference CommercialBalancesCollectionView}}">
+
+                        <CollectionView.ItemTemplate>
+                            <DataTemplate x:DataType="models:BalanceDisplayItem">
+                                <Grid>
+                                    <VisualStateManager.VisualStateGroups>
+                                        <VisualStateGroupList>
+                                            <VisualStateGroup x:Name="SelectionStates">
+                                                <VisualState x:Name="Normal">
+                                                    <VisualState.Setters>
+                                                        <Setter Property="BackgroundColor" Value="Transparent"/>
+                                                    </VisualState.Setters>
+                                                </VisualState>
+                                                <VisualState x:Name="Selected">
+                                                    <VisualState.Setters>
+                                                        <Setter Property="BackgroundColor" Value="LightGray"/>
+                                                    </VisualState.Setters>
+                                                </VisualState>
+                                            </VisualStateGroup>
+                                        </VisualStateGroupList>
+                                    </VisualStateManager.VisualStateGroups>
+                                    
+                                    <Grid.RowDefinitions>
+                                        <RowDefinition Height="Auto" />
+                                        <RowDefinition Height="Auto" />
+                                    </Grid.RowDefinitions>
+                                    
+                                    <Label Grid.Row="0"
+                                           FontAttributes="Bold"
+                                           LineBreakMode="WordWrap"
+                                           Text="{Binding Address}" />
+
+                                    <Label Grid.Row="1"
+                                           LineBreakMode="WordWrap"
+                                           Padding="0, 0, 0, 10"
+                                           VerticalOptions="End"
+                                           Text="{Binding Balance}"/>
+                                </Grid>
+                            </DataTemplate>
+                        </CollectionView.ItemTemplate>
+                        
+                    </CollectionView>
+                </Frame>
+            </Grid>
+
+            <Entry Placeholder="Amount" 
 				   Keyboard="Numeric"
 				   Grid.Row="6" 
 				   Grid.Column="0"
