--- a/BolWallet/Views/SendBolPage.xaml
+++ b/BolWallet/Views/SendBolPage.xaml
@@ -104,10 +104,82 @@
 
 			<Picker 
 			    Grid.Row="3"
+                IsVisible="{OnPlatform MacCatalyst=false, Default=true}"
 			    Title="From Commercial Address" 
                 ItemsSource="{Binding CommercialBalancesDisplayList}"
 			    SelectedIndex="{Binding SelectedCommercialAddressIndex}" >
 			</Picker>
+            
+            <Grid Grid.Row="3"
+                  Grid.ColumnSpan="3"
+                  HorizontalOptions="Start"
+                  RowDefinitions="Auto,*"
+                  RowSpacing="25"
+                  IsVisible="{OnPlatform MacCatalyst=true, Default=false}">
+                
+                <Label Grid.Row="0"
+                       Grid.ColumnSpan="3"
+                       Text="{Binding SelectedCommercialAddress}"
+                       TextColor="Black"/>
+                
+                <Frame   
+	                Grid.Row="1"
+	                Grid.ColumnSpan="3" 
+	                BackgroundColor="WhiteSmoke"
+                    Padding="10">
+
+                    <CollectionView
+                        x:Name="CommercialBalancesCollectionView"
+                        HeightRequest="150"
+                        BackgroundColor="WhiteSmoke"
+                        EmptyView="No addresses found"
+                        ItemsSource="{Binding FromCommercialBalancesList}"
+                        SelectionMode="Single"
+                        SelectionChangedCommand="{Binding SelectedFromCommercialBalanceCommand}"
+                        SelectionChangedCommandParameter="{Binding SelectedItem, Source={x:Reference CommercialBalancesCollectionView}}">
+
+                        <CollectionView.ItemTemplate>
+                            <DataTemplate x:DataType="models:BalanceDisplayItem">
+                                <Grid>
+                                    <VisualStateManager.VisualStateGroups>
+                                        <VisualStateGroupList>
+                                            <VisualStateGroup x:Name="SelectionStates">
+                                                <VisualState x:Name="Normal">
+                                                    <VisualState.Setters>
+                                                        <Setter Property="BackgroundColor" Value="Transparent"/>
+                                                    </VisualState.Setters>
+                                                </VisualState>
+                                                <VisualState x:Name="Selected">
+                                                    <VisualState.Setters>
+                                                        <Setter Property="BackgroundColor" Value="LightGray"/>
+                                                    </VisualState.Setters>
+                                                </VisualState>
+                                            </VisualStateGroup>
+                                        </VisualStateGroupList>
+                                    </VisualStateManager.VisualStateGroups>
+                                    
+                                    <Grid.RowDefinitions>
+                                        <RowDefinition Height="Auto" />
+                                        <RowDefinition Height="Auto" />
+                                    </Grid.RowDefinitions>
+                                    
+                                    <Label Grid.Row="0"
+                                           FontAttributes="Bold"
+                                           LineBreakMode="WordWrap"
+                                           Text="{Binding Address}" />
+
+                                    <Label Grid.Row="1"
+                                           LineBreakMode="WordWrap"
+                                           Padding="0, 0, 0, 10"
+                                           VerticalOptions="End"
+                                           Text="{Binding Balance}"/>
+                                </Grid>
+                            </DataTemplate>
+                        </CollectionView.ItemTemplate>
+                        
+                    </CollectionView>
+                </Frame>
+            </Grid>
 
 			<controls1:ExtendedTextEdit 
                 Grid.Row="4"
