--- a/BolWallet/Views/FinancialTransactionsPage.xaml
+++ b/BolWallet/Views/FinancialTransactionsPage.xaml
@@ -6,27 +6,36 @@
              x:Class="BolWallet.Views.FinancialTransactionsPage"
 			 xmlns:helpers="clr-namespace:BolWallet.Helpers"
              Title="Financial Transactions"
+             xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
 			 BackgroundColor="{DynamicResource SecondaryColor}">
 
-	<StackLayout VerticalOptions="Center"  Spacing="15" Padding="20">
+    <ContentPage.Resources>
+        <ResourceDictionary>
+            <toolkit:InvertedBoolConverter x:Key="InvertedBoolConverter" />
+        </ResourceDictionary>
+    </ContentPage.Resources>
 
-		<Button
+    <StackLayout VerticalOptions="Center"  Spacing="15" Padding="20">
+
+        <Button
                 Command="{Binding NavigateToTransferPageCommand}"
                 FontAttributes="Bold"
                 FontSize="12"
                 Text="Transfer" />
 
-		<Button
+        <Button
                 Command="{Binding NavigateToTransferClaimPageCommand}"
+                IsEnabled="{Binding IsCompanyAccount, Converter={StaticResource InvertedBoolConverter}}"
                 FontAttributes="Bold"
                 FontSize="12"
                 Text="Transfer Claim" />
 
-		<Button
+        <Button
                 FontAttributes="Bold"
                 FontSize="12"
                 Command="{Binding ClaimCommand}"
+                IsEnabled="{Binding IsCompanyAccount, Converter={StaticResource InvertedBoolConverter}}"
                 Text="Claim Your Bol" />
 
-	</StackLayout>
+    </StackLayout>
 </ContentPage>
