--- a/BolWallet/Pages/EcryptedCitizenshipPage.razor
+++ b/BolWallet/Pages/EcryptedCitizenshipPage.razor
@@ -211,8 +211,10 @@
 
         encryptedCitizenshipForm.CitizenshipActualBytes.GetType().GetProperty(property).SetValue(encryptedCitizenshipForm.CitizenshipActualBytes, encodedFileBytes);
         encryptedCitizenshipForm.CitizenshipHashes.GetType().GetProperty(property).SetValue(encryptedCitizenshipForm.CitizenshipHashes, hashedEncodedFileBytes);
-        encryptedCitizenshipForm.CitizenshipHashTableFileNames.GetType().GetProperty(property).SetValue(encryptedCitizenshipForm.CitizenshipHashTableFileNames, property +
-            $"_{encryptedCitizenshipForm.CountryCode}" + Path.GetExtension(fileResult.FullPath));
+        encryptedCitizenshipForm.CitizenshipHashTableFileNames.GetType()
+            .GetProperty(property)
+            .SetValue(encryptedCitizenshipForm.CitizenshipHashTableFileNames,
+                $"{property}_{encryptedCitizenshipForm.CountryCode}{Path.GetExtension(fileResult.FullPath)}");
 
         return encryptedCitizenshipForm;
     }
