Include jpg/jpeg in supported documents

--- a/BolWallet/Pages/EcryptedCitizenshipPage.razor
+++ b/BolWallet/Pages/EcryptedCitizenshipPage.razor
@@ -139,7 +139,7 @@
         { DevicePlatform.iOS, new[] { "com.adobe.pdf", "public.image", "public.audio" } },
         { DevicePlatform.Android, new[] { "application/pdf", "image/*", "audio/*" } },
         { DevicePlatform.MacCatalyst, new[] { "pdf", "png", "jpeg", "jpg", "public.image", "public.audio" } },
-        { DevicePlatform.WinUI, new[] { ".pdf", ".gif", ".mp3", ".png" } },
+        { DevicePlatform.WinUI, new[] { ".pdf", ".gif", ".mp3", ".png", ".jpg", ".jpeg" } },
         });
 
         var pickResult = await FilePicker.PickAsync(new PickOptions
